--- a/Book-Club-backend/requirements.txt
+++ b/Book-Club-backend/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.2
 click==8.1.8
 distlib==0.3.9
 Django==4.2.23
+django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 exceptiongroup==1.3.0
