--- a/Book-Club-backend/requirements.txt
+++ b/Book-Club-backend/requirements.txt
@@ -32,3 +32,6 @@ typing_extensions==4.13.2
 urllib3==2.2.3
 uvicorn==0.27.0
 virtualenv==20.27.1
+gunicorn==21.2.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
