--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,18 @@
-annotated-types==0.7.0
-anyio==4.5.2
-asgiref==3.8.1
-backports.zoneinfo==0.2.1
-certifi==2024.8.30
-charset-normalizer==3.4.2
-click==8.1.8
-distlib==0.3.9
+# Core Django packages
 Django==4.2.23
-django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-exceptiongroup==1.3.0
-fastapi==0.109.1
-filelock==3.16.1
-h11==0.16.0
-idna==3.10
-packaging==24.2
-pipenv==2024.4.0
-platformdirs==4.3.6
+django-cors-headers==4.4.0
+
+# Database
 psycopg2-binary==2.9.10
-pydantic==2.6.1
-pydantic_core==2.16.2
+dj-database-url==2.1.0
+
+# Production server
+gunicorn==21.2.0
+whitenoise==6.6.0
+
+# Utilities
+requests==2.31.0
 PyJWT==2.9.0
 python-dotenv==1.0.0
-python-multipart==0.0.20
-requests==2.31.0
-sniffio==1.3.1
-sqlparse==0.5.3
-starlette==0.35.1
-typing_extensions==4.13.2
-urllib3==2.2.3
-uvicorn==0.27.0
-virtualenv==20.27.1
-gunicorn==21.2.0
-dj-database-url==2.1.0
-whitenoise==6.6.0
