--- a/Book-Club-backend/render.yaml
+++ b/Book-Club-backend/render.yaml
@@ -35,3 +35,37 @@ services:
         value: "*"
       - key: CORS_ALLOWED_ORIGINS
         value: "https://your-frontend-domain.vercel.app"
+
+  # Django Debug Web Service
+  - type: web
+    name: book-club-backend-debug
+    env: python
+    plan: free
+    branch: debug
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+      python manage.py collectstatic --noinput
+      python manage.py migrate
+    startCommand: |
+      python manage.py collectstatic --noinput
+      gunicorn Book-Club-backend.wsgi:application --bind 0.0.0.0:$PORT
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.12"
+      - key: DEBUG
+        value: "True"
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DATABASE_URL
+        fromDatabase:
+          name: bookclub-database
+          property: connectionString
+      - key: ALLOWED_HOSTS
+        value: "*"
+      - key: CORS_ALLOWED_ORIGINS
+        value: "https://your-frontend-domain.vercel.app"
+      - key: DJANGO_SETTINGS_MODULE
+        value: "settings_debug"
+      - key: ENV
+        value: "debug"
