--- a/Book-Club-backend/render.yaml
+++ b/Book-Club-backend/render.yaml
@@ -49,7 +49,7 @@ services:
       python manage.py migrate
     startCommand: |
       python manage.py collectstatic --noinput
-      gunicorn Book-Club-backend.wsgi:application --bind 0.0.0.0:$PORT
+      gunicorn Book-Club-backend.wsgi:application --bind 0.0.0.0:$PORT --timeout 120 --keep-alive 5 --max-requests 1000
     envVars:
       - key: DEBUG
         value: "True"
