--- a/Book-Club-backend/.env.example
+++ b/Book-Club-backend/.env.example
@@ -10,6 +10,11 @@ SECRET_KEY=your-secret-key-here-change-this-in-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
+# Admin User Configuration (created automatically on deployment)
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@bookclub.com
+DJANGO_SUPERUSER_PASSWORD=admin123
+
 # Security Settings (for production)
 # SECURE_SSL_REDIRECT=True
 # SECURE_HSTS_SECONDS=31536000
